--- a/package.json
+++ b/package.json
@@ -1,56 +1,65 @@
 {
-  "name": "learn-hooks",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/styles": "^4.9.6",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "clsx": "^1.1.0",
-    "normalize.css": "^8.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-markdown": "^4.3.1",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-transition-group": "^4.3.0",
-    "redux-actions": "^2.6.5",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
-    "uuid": "^7.0.3"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "npm-check-updates": "^6.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "learn-hooks",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@material-ui/styles": "^4.9.6",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"axios": "^0.19.2",
+		"clsx": "^1.1.0",
+		"normalize.css": "^8.0.1",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-markdown": "^4.3.1",
+		"react-redux": "^7.2.0",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "3.4.1",
+		"react-transition-group": "^4.3.0",
+		"redux-actions": "^2.6.5",
+		"redux-logger": "^3.0.6",
+		"redux-saga": "^1.1.3",
+		"uuid": "^7.0.3"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+		"@babel/plugin-proposal-optional-chaining": "^7.9.0",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^6.8.0",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-react": "^7.19.0",
+		"eslint-plugin-react-hooks": "^3.0.0",
+		"husky": "^4.2.5",
+		"npm-check-updates": "^6.0.0",
+		"prettier": "^2.0.5",
+		"pretty-quick": "^2.0.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "pretty-quick --staged",
+			"...": "..."
+		}
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
