--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/user-event": "^7.1.2",
 		"axios": "^0.19.2",
 		"clsx": "^1.1.0",
+		"highlight.js": "^10.0.3",
 		"normalize.css": "^8.0.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
@@ -16,6 +17,7 @@
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
+		"react-syntax-highlighter": "^12.2.1",
 		"react-transition-group": "^4.3.0",
 		"redux-actions": "^2.6.5",
 		"redux-logger": "^3.0.6",
