--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"redux-actions": "^2.6.5",
 		"redux-logger": "^3.0.6",
 		"redux-saga": "^1.1.3",
+		"sylas-react-ui": "^1.0.0",
 		"uuid": "^7.0.3"
 	},
 	"devDependencies": {
