--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.7",
-    "ahooks": "^2.7.0",
     "axios": "^0.20.0",
     "border.css": "^0.10.0",
     "clsx": "^1.1.1",
-    "lodash-es": "^4.17.15",
     "markdown-to-jsx": "^7.0.1",
     "qs": "^6.9.4",
     "react": "^16.13.1",
