--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-f",
+  "name": "blog-fe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -29,13 +29,15 @@
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "babel-plugin-transform-imports": "^2.0.0",
     "customize-cra": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
     "react-app-rewired": "^2.1.6",
-    "sass": "^1.27.0"
+    "sass": "^1.27.0",
+    "sass-resources-loader": "^2.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
