--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "sylas-react-ui": "^1.1.1",
-    "url-join": "^4.0.1"
+    "url-join": "^4.0.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
