--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "border.css": "^0.10.0",
     "clsx": "^1.1.1",
     "markdown-to-jsx": "^7.0.1",
+    "omit.js": "^2.0.2",
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -41,7 +42,7 @@
     "sass-resources-loader": "^2.1.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "PORT=9999 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
