--- a/package.json
+++ b/package.json
@@ -5,44 +5,44 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
-    "@testing-library/user-event": "^12.1.7",
-    "axios": "^0.20.0",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "border.css": "^0.10.0",
     "clsx": "^1.1.1",
     "markdown-to-jsx": "^7.0.1",
     "omit.js": "^2.0.2",
     "qs": "^6.9.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.0",
     "react-syntax-highlighter": "^15.2.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "sylas-react-ui": "^1.1.1",
+    "sylas-react-ui": "^1.1.3",
     "url-join": "^4.0.1",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "babel-plugin-transform-imports": "^2.0.0",
     "customize-cra": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2",
+    "pretty-quick": "^3.1.0",
     "react-app-rewired": "^2.1.6",
-    "sass": "^1.27.0",
+    "sass": "^1.27.1",
     "sass-resources-loader": "^2.1.1"
   },
   "scripts": {
-    "start": "PORT=9999 react-app-rewired start",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
