--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@ant-design/icons": "^4.3.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "add": "^2.0.6",
     "axios": "^0.21.0",
     "border.css": "^0.10.0",
     "clsx": "^1.1.1",
     "markdown-to-jsx": "^7.0.1",
+    "mdi-react": "^7.4.0",
     "omit.js": "^2.0.2",
     "qs": "^6.9.4",
     "react": "^17.0.1",
@@ -24,9 +25,12 @@
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "sylas-react-ui": "^1.1.3",
+    "styled-components": "^5.2.1",
+    "styled-system": "^5.1.5",
+    "sylas-react-ui": "^2.0.0",
     "url-join": "^4.0.1",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
@@ -42,7 +46,7 @@
     "sass-resources-loader": "^2.1.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "PORT=3333 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
