--- a/package.json
+++ b/package.json
@@ -4,45 +4,45 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
     "add": "^2.0.6",
     "axios": "^0.21.0",
     "border.css": "^0.10.0",
     "clsx": "^1.1.1",
-    "markdown-to-jsx": "^7.0.1",
+    "markdown-to-jsx": "^7.1.0",
     "mdi-react": "^7.4.0",
     "omit.js": "^2.0.2",
     "qs": "^6.9.4",
-    "react": "^17.0.1",
+    "react": "17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-syntax-highlighter": "^15.2.1",
+    "react-syntax-highlighter": "^15.3.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
-    "sylas-react-ui": "^2.0.0",
+    "sylas-react-ui": "^2.0.1",
     "url-join": "^4.0.1",
     "uuid": "^8.3.1",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "babel-plugin-transform-imports": "^2.0.0",
     "customize-cra": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.0",
     "pretty-quick": "^3.1.0",
     "react-app-rewired": "^2.1.6",
-    "sass": "^1.27.1",
+    "sass": "^1.29.0",
     "sass-resources-loader": "^2.1.1"
   },
   "scripts": {
