--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "border.css": "^0.10.0",
     "clsx": "^1.1.1",
     "dayjs": "^1.9.6",
+    "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "markdown-to-jsx": "^7.1.0",
     "mdi-react": "^7.4.0",
     "omit.js": "^2.0.2",
     "qs": "^6.9.4",
     "react": "17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
@@ -28,7 +32,7 @@
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
-    "sylas-react-ui": "^2.0.3",
+    "sylas-react-ui": "^2.0.4",
     "url-join": "^4.0.1",
     "uuid": "^8.3.1"
   },
