--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blog-frontend",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "private": true,
   "homepage": ".",
   "dependencies": {
@@ -11,7 +11,7 @@
     "axios": "^0.21.1",
     "border.css": "^0.10.0",
     "clsx": "^1.1.1",
-    "dayjs": "^1.9.8",
+    "dayjs": "^1.10.1",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.0.21",
@@ -32,7 +32,7 @@
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
-    "sylas-react-ui": "^2.0.9",
+    "sylas-react-ui": "^2.0.10",
     "url-join": "^4.0.1",
     "use-clipboard-hook": "^1.1.1",
     "uuid": "^8.3.2"
@@ -40,11 +40,13 @@
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "archiver": "^5.1.0",
     "babel-plugin-transform-imports": "^2.0.0",
     "customize-cra": "^1.0.0",
     "eslint-plugin-prettier": "^3.3.0",
     "gzipper": "^4.3.0",
     "husky": "^4.3.6",
+    "node-scp": "^0.0.8",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "react-app-rewired": "^2.1.8",
@@ -55,6 +57,7 @@
   "scripts": {
     "start": "REACT_APP_PROXY_ENV=development PORT=3333 react-app-rewired start",
     "build": "REACT_APP_PROXY_ENV=production react-app-rewired build && gzipper compress --verbose ./build",
+    "deploy": "node ./scripts/deploy.js",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "test": "REACT_APP_PROXY_ENV=development react-app-rewired test",
     "eject": "react-app-rewired eject"
