--- a/package.json
+++ b/package.json
@@ -1,81 +1,83 @@
 {
-  "name": "blog-frontend",
-  "version": "0.2.9",
-  "private": true,
-  "homepage": ".",
-  "dependencies": {
-    "@ant-design/icons": "^4.5.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.0",
-    "axios": "^0.21.1",
-    "border.css": "^0.10.0",
-    "clsx": "^1.1.1",
-    "dayjs": "^1.10.4",
-    "i18next": "^19.8.7",
-    "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-http-backend": "^1.1.0",
-    "markdown-to-jsx": "^7.1.1",
-    "mdi-react": "^7.4.0",
-    "omit.js": "^2.0.2",
-    "qs": "^6.9.6",
-    "react": "17.0.1",
-    "react-dom": "^17.0.1",
-    "react-i18next": "^11.8.6",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
-    "react-syntax-highlighter": "^15.4.3",
-    "redux": "^4.0.5",
-    "redux-actions": "^2.6.5",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
-    "styled-components": "^5.2.1",
-    "styled-system": "^5.1.5",
-    "sylas-react-ui": "^2.0.10",
-    "url-join": "^4.0.1",
-    "use-clipboard-hook": "^1.1.1",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.12.13",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "archiver": "^5.2.0",
-    "babel-plugin-transform-imports": "^2.0.0",
-    "customize-cra": "^1.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "gzipper": "^4.4.0",
-    "husky": "^5.0.9",
-    "node-scp": "^0.0.8",
-    "node-ssh": "^11.1.1",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "react-app-rewired": "^2.1.8",
-    "sass": "^1.32.7",
-    "sass-resources-loader": "^2.1.1",
-    "source-map-explorer": "^2.5.2"
-  },
-  "scripts": {
-    "start": "REACT_APP_PROXY_ENV=development PORT=3333 react-app-rewired start",
-    "build": "REACT_APP_PROXY_ENV=production react-app-rewired build && gzipper compress --verbose ./build",
-    "deploy": "node ./scripts/deploy.js",
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "test": "REACT_APP_PROXY_ENV=development react-app-rewired test",
-    "eject": "react-app-rewired eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "blog-frontend",
+	"version": "0.3.0",
+	"private": false,
+	"homepage": ".",
+	"dependencies": {
+		"@ant-design/icons": "^4.5.0",
+		"@testing-library/jest-dom": "^5.11.9",
+		"@testing-library/react": "^11.2.5",
+		"@testing-library/user-event": "^12.8.1",
+		"axios": "^0.21.1",
+		"border.css": "^0.10.0",
+		"clsx": "^1.1.1",
+		"dayjs": "^1.10.4",
+		"i18next": "^19.9.1",
+		"i18next-browser-languagedetector": "^6.0.1",
+		"i18next-http-backend": "^1.1.1",
+		"markdown-to-jsx": "^7.1.1",
+		"mdi-react": "^7.4.0",
+		"omit.js": "^2.0.2",
+		"qs": "^6.9.6",
+		"react": "17.0.1",
+		"react-dom": "^17.0.1",
+		"react-i18next": "^11.8.9",
+		"react-redux": "^7.2.2",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.3",
+		"react-syntax-highlighter": "^15.4.3",
+		"redux": "^4.0.5",
+		"redux-actions": "^2.6.5",
+		"redux-logger": "^3.0.6",
+		"redux-saga": "^1.1.3",
+		"styled-components": "^5.2.1",
+		"styled-system": "^5.1.5",
+		"sylas-react-ui": "^2.0.10",
+		"url-join": "^4.0.1",
+		"use-clipboard-hook": "^1.1.1",
+		"uuid": "^8.3.2"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-optional-chaining": "^7.13.8",
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
+		"archiver": "^5.3.0",
+		"babel-plugin-transform-imports": "^2.0.0",
+		"customize-cra": "^1.0.0",
+		"eslint-plugin-prettier": "^3.3.1",
+		"gzipper": "^4.4.0",
+		"husky": "^5.1.3",
+		"node-scp": "^0.0.14",
+		"node-ssh": "^11.1.1",
+		"pinst": "^2.1.6",
+		"prettier": "^2.2.1",
+		"pretty-quick": "^3.1.0",
+		"react-app-rewired": "^2.1.8",
+		"sass": "^1.32.8",
+		"sass-resources-loader": "^2.1.1",
+		"source-map-explorer": "^2.5.2"
+	},
+	"scripts": {
+		"postinstall": "husky install",
+		"start": "REACT_APP_PROXY_ENV=development PORT=3333 react-app-rewired start",
+		"build": "REACT_APP_PROXY_ENV=production react-app-rewired build && gzipper compress --verbose ./build",
+		"deploy": "node ./scripts/deploy.js",
+		"analyze": "source-map-explorer 'build/static/js/*.js'",
+		"test": "REACT_APP_PROXY_ENV=development react-app-rewired test",
+		"eject": "react-app-rewired eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
